# why2025-rust-starter

./: Cargo.toml  Readme.adoc  build.rs  flake.nix  metadata.json  publish.sh
.cargo/: config.toml
src/: main.rs
