[package]
name = "rust_starter"
version = "1.0.0"
edition = "2024"
authors = ["Zebreus"]
description = "A starter template for the Why2025 badge Rust app"
license = "AGPL-3.0"
repository = "https://github.com/zebreus/why2025-rust-starter"
keywords = ["why2025", "badge"]
categories = ["embedded", "no-std", "os"]

[package.metadata.badgehub]
name = "rust_starter"

[profile.release]
panic = 'abort'
lto = "fat"
[profile.dev]
panic = 'abort'
lto = "thin"

[dependencies]
lazy_static = { version = "1.4.0", default-features = false, features = [
    "spin_no_std",
] }
sdl3-sys = { version = "0.5.4", default-features = false, features = [
    "no-link",
] }
